--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "node ./src/app.js",
-    "test": "nodemon ./src/app.js"
+    "test": "nodemon ./src/app.js",
+    "runbot": "nodemon ./botExample/index.js"
   },
   "author": {
     "name": "drpidman(DRK)",
@@ -18,11 +19,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "randomstring": "^1.2.1"
   }
 }
