--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "@Null"
+    "url": "git+https://github.com/drpidman/economy-api.git"
   },
   "name": "economy-api",
   "version": "1.0.0",
